--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1,10 +1,10 @@
 {
   "extName": {
-    "message": "Yami – Cerca ràpida d'adreces d'interès",
+    "message": "Yami – Cerca fuzzy d'adreces d'interès",
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Cerca i obre adreces d'interès ràpidament amb una interfície similar a Raycast.",
+    "message": "Cerca i obre les teves adreces d'interès ràpidament amb una interfície ràpida controlada per teclat amb fuzzy matching.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
@@ -12,7 +12,7 @@
     "description": "Placeholder text shown in the search input field"
   },
   "commandDescription": {
-    "message": "Obre la cerca difusa d'adreces d'interès",
+    "message": "Obre la cerca fuzzy d'adreces d'interès",
     "description": "Description of the keyboard shortcut command"
   }
 }
