--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extName": {
-    "message": "Yami – Bookmark Launcher",
+    "message": "Yami — Bookmark Launcher",
     "description": "The name of the extension"
   },
   "extDescription": {
