--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1,10 +1,10 @@
 {
   "extName": {
-    "message": "Yami – Pencarian fuzzy untuk bookmark",
+    "message": "Yami – Peluncur Bookmark",
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Cari dan buka bookmark Anda dengan cepat menggunakan antarmuka cepat berbasis keyboard dengan fuzzy matching.",
+    "message": "Ekstensi yang cepat dan ringan untuk membantu Anda menemukan dan membuka bookmark secara instan — langsung dari keyboard Anda.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
@@ -12,7 +12,7 @@
     "description": "Placeholder text shown in the search input field"
   },
   "commandDescription": {
-    "message": "Buka pencarian fuzzy bookmark",
+    "message": "Buka peluncur bookmark",
     "description": "Description of the keyboard shortcut command"
   }
 }
