--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -1,10 +1,10 @@
 {
   "extName": {
-    "message": "Yami – การค้นหาบุ๊กมาร์กแบบ fuzzy",
+    "message": "Yami – ลันเชอร์บุ๊กมาร์ก",
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "ค้นหาและเปิดบุ๊กมาร์กของคุณได้อย่างรวดเร็วด้วยอินเทอร์เฟซที่ขับเคลื่อนด้วยแป้นพิมพ์และ fuzzy matching",
+    "message": "ส่วนขยายที่รวดเร็วและน้ำหนักเบาที่ช่วยให้คุณค้นหาและเปิดบุ๊กมาร์กได้ทันที — โดยตรงจากแป้นพิมพ์ของคุณ",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
@@ -12,7 +12,7 @@
     "description": "Placeholder text shown in the search input field"
   },
   "commandDescription": {
-    "message": "เปิดการค้นหาบุ๊กมาร์กแบบ fuzzy",
+    "message": "เปิดลันเชอร์บุ๊กมาร์ก",
     "description": "Description of the keyboard shortcut command"
   }
 }
