fix: adjust em dashes

--- a/_locales/ar-EG/messages.json
+++ b/_locales/ar-EG/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "إضافة سريعة وخفيفة الوزن تساعدك في العثور على الإشارات المرجعية وفتحها فورًا — مباشرة من لوحة المفاتيح.",
+    "message": "إضافة سريعة وخفيفة الوزن تساعدك في العثور على الإشارات المرجعية وفتحها فورًا - مباشرة من لوحة المفاتيح.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
