--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Una extensió ràpida i lleugera que t'ajuda a trobar i obrir adreces d'interès a l'instant — directament des del teclat.",
+    "message": "Una extensió ràpida i lleugera que t'ajuda a trobar i obrir adreces d'interès a l'instant - directament des del teclat.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
