--- a/_locales/eu/messages.json
+++ b/_locales/eu/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Azkar eta arin laguntzen dizun hedapena, zure laster-markak berehala aurkitu eta irekitzeko — zuzenean teklatutik.",
+    "message": "Azkar eta arin laguntzen dizun hedapena, zure laster-markak berehala aurkitu eta irekitzeko - zuzenean teklatutik.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
