--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "افزونه‌ای سریع و سبک که به شما کمک می‌کند نشانک‌ها را فوراً پیدا و باز کنید — مستقیماً از صفحه‌کلید.",
+    "message": "افزونه‌ای سریع و سبک که به شما کمک می‌کند نشانک‌ها را فوراً پیدا و باز کنید - مستقیماً از صفحه‌کلید.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
