--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Unha extensión rápida e lixeira que che axuda a atopar e abrir marcadores ao instante — directamente desde o teu teclado.",
+    "message": "Unha extensión rápida e lixeira que che axuda a atopar e abrir marcadores ao instante - directamente desde o teu teclado.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
