--- a/_locales/pt-BR/messages.json
+++ b/_locales/pt-BR/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Uma extensão rápida e leve que ajuda você a encontrar e abrir favoritos instantaneamente — direto do seu teclado.",
+    "message": "Uma extensão rápida e leve que ajuda você a encontrar e abrir favoritos instantaneamente - direto do seu teclado.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
