--- a/_locales/pt-PT/messages.json
+++ b/_locales/pt-PT/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Uma extensão rápida e leve que o ajuda a encontrar e abrir marcadores instantaneamente — diretamente do seu teclado.",
+    "message": "Uma extensão rápida e leve que o ajuda a encontrar e abrir marcadores instantaneamente - diretamente do seu teclado.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
