--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "ส่วนขยายที่รวดเร็วและน้ำหนักเบาที่ช่วยให้คุณค้นหาและเปิดบุ๊กมาร์กได้ทันที — โดยตรงจากแป้นพิมพ์ของคุณ",
+    "message": "ส่วนขยายที่รวดเร็วและน้ำหนักเบาที่ช่วยให้คุณค้นหาและเปิดบุ๊กมาร์กได้ทันที - โดยตรงจากแป้นพิมพ์ของคุณ",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
