--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Ekstensi yang cepat dan ringan untuk membantu Anda menemukan dan membuka bookmark secara instan — langsung dari keyboard Anda.",
+    "message": "Ekstensi yang cepat dan ringan untuk membantu Anda menemukan dan membuka bookmark secara instan - langsung dari keyboard Anda.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
