--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Szybkie i lekkie rozszerzenie, które pomaga natychmiast znaleźć i otworzyć zakładki — prosto z klawiatury.",
+    "message": "Szybkie i lekkie rozszerzenie, które pomaga natychmiast znaleźć i otworzyć zakładki - prosto z klawiatury.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
