--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Hızlı ve hafif bir uzantı; yer imlerinizi anında bulmanıza ve açmanıza yardımcı olur — doğrudan klavyenizden.",
+    "message": "Hızlı ve hafif bir uzantı; yer imlerinizi anında bulmanıza ve açmanıza yardımcı olur - doğrudan klavyenizden.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
