--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extDescription": {
-    "message": "Một tiện ích mở rộng nhanh và nhẹ giúp bạn tìm và mở dấu trang ngay lập tức — trực tiếp từ bàn phím.",
+    "message": "Một tiện ích mở rộng nhanh và nhẹ giúp bạn tìm và mở dấu trang ngay lập tức - trực tiếp từ bàn phím.",
     "description": "The description of the extension"
   },
   "searchPlaceholder": {
